[package]
name = "adventOfCode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11.22", features = ["blocking"] }

[[bin]]
name = "prepare"
path = "src/prepare.rs"

[[bin]]
name = "day1"
path = "src/day1/main.rs"
